# shrimpy_ros

./: .gitignore  README.md  package.xml  setup.py
apptainer/: ros2-dev.def  ros_entrypoint.sh
archive/mantis_msgs/: CMakeLists.txt  package.xml
archive/mantis_msgs/action/: PhaseAcquisition.action
archive/mantis_ros/: setup.cfg  setup.py
archive/mantis_ros/config/: blackfly_s.yaml
archive/mantis_ros/mantis_ros/: phase_acquisition_action_server.py
archive/triggerscope_msgs/: package.xml
archive/triggerscope_msgs/srv/: SetAnalogOut.srv  SetAnalogRange.srv  SetDigitalOut.srv
archive/triggerscope_ros/: package.xml  setup.cfg  setup.py
automaton_bringup/: CMakeLists.txt  automaton_bringupConfig.cmake.in  automaton_bringupConfigVersion.cmake.in  package.xml
automaton_bringup/launch/: blackfly_to_zarr.launch.py
mantis_msgs/: package.xml
mantis_msgs/action/: PhaseAcquisition.action
mantis_ros/: README.md  package.xml  setup.py
mantis_ros/config/: automaton_config.yaml  blackfly_s.yaml
mantis_ros/launch/: automaton_phase.launch.py
mantis_ros/mantis_ros/: phase_acquisition_action_server.py
triggerscope_msgs/: CMakeLists.txt
triggerscope_msgs/srv/: ControlAnalogSequence.srv  SetAnalogSequence.srv  SetDigitalOut.srv
triggerscope_ros/: package.xml  setup.py  triggerscope_node.py
triggerscope_ros/triggerscope_ros/: ascii_serial_transport_node.py  triggerscope_server_node.py
waveorder_ros/: Dockerfile  package.xml  ros_entrypoint.sh  setup.cfg  setup.py
waveorder_ros/launch/: waveorder.launch.py
waveorder_ros/waveorder_ros/: phase_calibration_node.py  phase_reconstruction_node.py
