<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>automaton_bringup</name>
  <version>0.0.0</version>
  <description>Launch and configuration files for the automaton microscope dev setup.</description>
  <maintainer email="jeskesen@chanzuckerberg.com">Justin Eskesen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>spinnaker_camera_driver</exec_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
