<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waveorder_ros</name>
  <version>0.0.0</version>
  <description>Nodes for performing phase reconstruction using waveorder</description>
  <maintainer email="jeskesen@chanzuckerberg.com">Justin Eskesen</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>waveorder_msgs</depend>
  <depend>triggerscope_msgs</depend>
  <depend>flir_camera_msgs</depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
